# Cruhon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  library.md  pyproject.toml
.github/workflows/: publish.yml
cruhon/: __init__.py  cli.py
cruhon/core/: __init__.py  ast_nodes.py  cache.py  dependency_resolver.py  diagnostics.py  lexer.py  mod_loader.py  namespace_runtime.py  parser.py  registry.py  runner.py  syntax_engine.py  transpiler.py
cruhon/examples/: functions.clpy  hello.clpy
cruhon/mods/: README.md
cruhon/tests/: conftest.py  test_async.clpy  test_cache.py  test_cli.py  test_commands.clpy  test_concurrency.py  test_core.py  test_crypto_log_config.py  test_data.py  test_db_serialization.py  test_db_serialization_extended.py  test_db_serialization_v2.py  test_determinism.clpy  test_dev_tools.py  test_dict_literal.clpy  test_discord.py  test_env.clpy  test_expanded_methods.py  test_expanded_methods2.py  test_expanded_methods3.py  test_expanded_methods4.py  test_file_date.py  test_file_mgmt_utils.py  test_file_path.py  test_gap_fill.py  test_handlers_compile.py  test_html_web.py  test_language_v25.py  test_language_v26.py  test_namespace.clpy  test_namespace_isolation.py  test_namespace_runtime.py  test_networking.py  test_os_introspect.py  test_os_system.py  test_raw.clpy  test_repeat.clpy  test_schedule.py  test_semantics.clpy  test_shell_archive_mail.py  (+9 more)
lsp/: pyproject.toml
lsp/cruhon_lsp/: __init__.py  __main__.py  completions.py  diagnostics.py  server.py  symbols.py
lsp/neovim/: cruhon_lsp.lua
lsp/vscode-cruhon/: extension.js  language-configuration.json  package.json
lsp/vscode-cruhon/syntaxes/: cruhon.tmLanguage.json
mods/cruhon-data/: __init__.py  mod.json
mods/cruhon-db/: __init__.py  mod.json
mods/cruhon-discord/: API_INVENTORY.md  DISCORD_PLAN.md  README.md  __init__.py  mod.json
mods/cruhon-schedule/: __init__.py  mod.json
mods/cruhon-shortcuts-data/: __init__.py  data_config.py  data_format.py  data_media.py  data_numbers.py  data_regex.py  data_system.py  mod.json
mods/cruhon-shortcuts-pro/: __init__.py  mod.json  pro_config.py  pro_dicts.py  pro_file.py  pro_http.py  pro_lists.py  pro_logic.py  pro_math.py  pro_regex.py  pro_text.py
spec/: architecture.md  grammar.md  rules.md  semantics.md  version.json
support-tawk/: Dockerfile  README.md  config.yml  docker-compose.yml  requirements.txt
support-tawk/server/: auth.py  (+5 more)
(+148 files in other folders)
